<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">
        <Button
            android:id="@+id/writeletter_btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/writeletter_btn_back"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="22dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"/>

        <Button
            android:id="@+id/writeletter_btn_sent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/writeletter_btn_post"
            android:layout_marginTop="5dp"
            android:layout_marginRight="22dp" />




    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/writeletter_bg_cream">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/writeletter_bg_small">
                <TextView
                    android:id="@+id/writeletter_tv_title"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:singleLine="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/writeletter_et_title"
                    android:gravity="center"
                    android:maxLength="10"
                    android:text=""
                    android:hint="@string/writeletter_et_title"
                    android:textColor="#653C20"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/writeletter_tv_name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/writeletter_et_letterbody"
                    style="@style/AppTheme.writeletter_etStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:hint="@string/writeletter_et_hint"
                    android:layout_marginTop="15dp"
                    android:gravity="top"
                    android:minLines="10"
                    android:textSize="18sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="5dp"
                        android:gravity="right"
                        android:text="@string/writeletter_tv_name2"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="5dp"
                        android:gravity="right"
                        android:text="@string/writeletter_tv_date"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>