<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test_bg_big">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <Button
        android:id="@+id/testfinish_btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="22dp"
        android:background="@drawable/test_btn_back" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/test_bg_small"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/testfinish_iv_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:background="@drawable/testrecord_testresult_happy"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="40dp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/testfinish_tv_grade1"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/testfinish_tv_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/testfinish_tv_grade2"
                    android:textColor="@color/test_btn_next_brown"
                    android:textStyle="bold"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp">
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/testfinish_tv_sentence"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="8"
                    android:layout_marginTop="10dp"
                    android:text="@string/testfinish_tv_normal"
                    android:textColor="#C98A6B"
                    android:textStyle="bold"
                    android:textSize="18sp" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1">
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>
                <Button
                    android:id="@+id/testfinish_btn_end"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/test_btn_next"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    android:text="@string/testfinish_btn_over"
                    android:textSize="18sp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>
</LinearLayout>